# Kaggle.Store-Sales

./: .gitignore  README.md  pyproject.toml
docs/: baseline_reading.md  data_tables_reading.md  eda_interpretation.md  error_analysis_reading.md  experiment_log.csv  feature_experiments.md  project_log.md  project_progress_table.md  resume_project_summary.md  store_sales_competition_guide.md
reports/eda/: eda_report.md
reports/eda/tables/: dataset_overview.csv  family_summary.csv  holiday_summary.csv  store_cluster_summary.csv
reports/error_analysis/: error_analysis_report.md
reports/error_analysis/tables/: family_error.csv  fold_comparison.csv  promotion_bin_error.csv  store_error.csv
reports/family_focus/school_office_supplies/: family_focus_report.md
reports/feature_experiments/low_demand_v1/: experiment_report.md
reports/feature_experiments/school_supplies_aug_promo_v1/: experiment_report.md
reports/fold3_cross_error/: fold3_cross_error_report.md
reports/fold3_cross_error/tables/: fold3_family_promotion_worsening.csv  fold3_family_store_promotion_worsening.csv  fold3_family_store_worsening.csv  fold3_family_worsening.csv  (+7 more)
reports/model_comparison/: comparison_report.md  comparison_results.csv
src/store_sales/: __init__.py  blend_validation.py  cli.py  config.py  data.py  eda.py  error_analysis.py  experiment_log.py  experiment_runner.py  family_focus_analysis.py  feature_experiment_report.py  feature_profiles.py  features.py  fold3_cross_error.py  metrics.py  modeling.py  pipeline.py  stability_slice_report.py  validation_window_report.py
(+63 files in other folders)
